--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "eslint"
   ],
   "version": "0.0.0-development",
+  "type": "module",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
     "build": "tsc",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
-    "danger": "danger local --base main",
+    "danger": "danger local --base main --text-only --failOnErrors --dangerfile dangerfile.ts",
     "docs": "esdoc -c .esdoc.json",
-    "lint": "eslint --cache --fix ''src/**/*.ts''",
+    "lint": "eslint --cache --fix '**/*.ts'",
     "test": "jest",
     "predocs": "rm -rf docs/",
     "precommit": "lint-staged",
     "prepublish": "yarn build",
-    "prettier": "yarn prettier --write 'src/**/*.{ts,tsx}'",
+    "prettier": "prettier --write '**/*.{js,ts,json,md}'",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "license": "MIT",
@@ -49,6 +50,7 @@
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "danger": "*",
+    "danger-plugin-jest": "^1.3.0",
     "danger-plugin-yarn": "^1.3.2",
     "eslint": "7.20.0",
     "eslint-config-google": "0.14.0",
@@ -69,8 +71,13 @@
       "path": "cz-conventional-changelog"
     }
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.@(ts|tsx)": [
+    "*.ts": [
       "eslint --fix",
       "prettier --write",
       "git add"
@@ -79,11 +86,10 @@
   "jest": {
     "moduleFileExtensions": [
       "ts",
-      "tsx",
       "js"
     ],
     "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(.test)\\.(ts|tsx)$",
     "testPathIgnorePatterns": [
