--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "**/.git": true,
         "**/dist": true,
         "**/node_modules": true
-    }
+    },
+    "npm.packageManager": "yarn"
 }
