--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "danger-plugin-jest": "^1.3.0",
     "danger-plugin-yarn": "^1.3.2",
     "eslint": "7.20.0",
-    "eslint-config-google": "0.14.0",
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
@@ -96,5 +95,9 @@
       "\\.snap$",
       "<rootDir>/node_modules/"
     ]
+  },
+  "peerDependencies": {
+    "danger": "*",
+    "eslint": "*"
   }
 }
