--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,6 @@
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "func-names": "error",
-    "id-length": ["error", { "min": 2 }]
+    "id-length": ["warn", { "min": 4 }]
   }
 }
