--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,4 @@ dist/
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# End of https://www.gitignore.io/api/node,visualstudiocode
+test-results.json
