--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b tsconfig.json",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
     "danger": "danger local --base main --text-only --failOnErrors --dangerfile dangerfile.ts",
@@ -86,7 +86,7 @@
     "testEnvironment": "node",
     "preset": "ts-jest",
     "testMatch": [
-      "<rootDir>/src/**/*.test.ts"
+      "<rootDir>/test/**/*.test.ts"
     ],
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.ts"
