--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "ES2020",
-    "module": "commonjs"
+    "module": "commonjs",
+    "declaration": true,
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*.ts"],
 }
