--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "target": "ES2020",
+    "target": "es6",
     "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
+    "lib": ["es2017"],
     "types": ["node", "jest"]
   },
   "include": ["src/**/*.ts"],
