Add warning diff

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "@types/diff": "5.0.0",
     "@types/eslint": "7.2.6",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.27",
@@ -95,5 +96,8 @@
   "peerDependencies": {
     "danger": "*",
     "eslint": "*"
+  },
+  "dependencies": {
+    "diff": "5.0.0"
   }
 }
